# opengm_rts_gui

./: README.md
.cargo/: config.toml
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
